browser/themes/shared/urlbarView.inc.css
%if 0



%endif

%filter substitution
%define urlbarViewPadding 4px
%define urlbarViewIconMarginEnd (@identityBoxPaddingInline@ + @identityBoxMarginInlineEnd@)
%define urlbarViewMarginInline 7px
%define urlbarViewItemInlinePadding 6px

%include ../shared/urlbar/dynamicResults.inc.css

:root {
  --autocomplete-popup-background: var(--arrowpanel-background);
  --autocomplete-popup-color: var(--arrowpanel-color);
  --autocomplete-popup-highlight-background: Highlight;
  --autocomplete-popup-highlight-color: HighlightText;

  
  --urlbarView-button-background: rgba(12, 12, 13, 0.1);
  --urlbarView-button-background-hover: rgba(12, 12, 13, 0.2);
  --urlbarView-button-background-active: rgba(12, 12, 13, 0.3);
  --urlbarView-primary-button-text: white;
  --urlbarView-primary-button-background: #0060df;
  --urlbarView-primary-button-background-hover: #003eaa;
  --urlbarView-primary-button-background-active: #002275;
  --urlbarView-action-slide-in-distance: 200px;
}

:root:-moz-lwtheme {
  --urlbar-popup-url-color: hsl(210, 77%, 47%);
  --urlbar-popup-action-color: hsl(178, 100%, 28%);
}

:root:-moz-lwtheme[lwt-toolbar-field-focus-brighttext] {
  --urlbar-popup-url-color: @lwtPopupBrighttextLinkColor@;
  --urlbar-popup-action-color: #30e60b;

  
  --urlbarView-button-background: rgba(249, 249, 250, 0.24);
  --urlbarView-button-background-hover: rgba(249, 249, 250, 0.15);
  --urlbarView-button-background-active: rgba(249, 249, 250, 0.2);
}

:root:-moz-locale-dir(rtl) {
  --urlbarView-action-slide-in-distance: -200px;
}

.urlbarView {
  
  -moz-window-dragging: no-drag;

  display: block;
  text-shadow: none;
  overflow: clip;
  margin-inline: @urlbarViewMarginInline@;
  width: calc(100% - 2 * @urlbarViewMarginInline@);

  
  border-inline: 1px solid transparent;
}



#urlbar[open] > .urlbarView {
  margin-block-start: -@urlbarBreakoutExtend@;
}

.urlbarView-body-inner {
  width: 100%;
}

#urlbar[open] > .urlbarView > .urlbarView-body-outer > .urlbarView-body-inner {
  border-top: 1px solid var(--urlbar-separator-color);
}

.urlbarView-results {
  padding-block: @urlbarViewPadding@;
  white-space: nowrap;
}


.urlbarView[noresults] > .urlbarView-body-outer > .urlbarView-body-inner > .urlbarView-results {
  padding-block: 0;
}

.urlbarView-row {
  fill: currentColor;
  fill-opacity: .6;
  padding-block: 3px;
}

.urlbarView-row-inner {
  border-radius: 2px;
  padding-inline-start: @urlbarViewItemInlinePadding@;
  padding-block: 6px;
}

:root[uidensity=touch] .urlbarView-row:not([type=tip]):not([type=dynamic]) {
  padding-block: 11px;
}

.urlbarView-row[type=tip] {
  padding-block-start: 18px;
  
  padding-block-end: calc(18px - 16px);
  
  padding-inline-end: calc(@urlbarViewItemInlinePadding@ + 4px);
}

.urlbarView-row-inner,
.urlbarView-no-wrap {
  display: flex;
  flex-wrap: nowrap;
  align-items: end;
  justify-content: start;
}

.urlbarView[actionoverride] .urlbarView-row[has-url] > .urlbarView-row-inner > .urlbarView-no-wrap,
.urlbarView-row[has-url]:not([type$=tab]) > .urlbarView-row-inner > .urlbarView-no-wrap,
.urlbarView-row[has-url]:is([type=remotetab], [sponsored]):is(:hover, [selected]) > .urlbarView-row-inner > .urlbarView-no-wrap {
  

  flex-shrink: 0;
  max-width: calc(70% - 2 * (16px + (6px + 2px)));
}



@media screen and (min-height: 600px) {
  .urlbarView-results[wrap] > .urlbarView-row > .urlbarView-row-inner {
    flex-wrap: wrap;
  }
  .urlbarView-results[wrap] > .urlbarView-row > .urlbarView-row-inner > .urlbarView-no-wrap {
    max-width: 100% !important;
    flex-basis: 100%;
  }
  .urlbarView-results[wrap] > .urlbarView-row[has-url] > .urlbarView-row-inner > .urlbarView-url {
    margin-top: 2px;
  }
  
  .urlbarView-results[wrap] > .urlbarView-row[has-url] > .urlbarView-row-inner > .urlbarView-url:-moz-locale-dir(ltr) {
    padding-left: calc(@urlbarViewItemInlinePadding@ + @identityBoxMarginInlineEnd@ +  16px);
  }
  .urlbarView-results[wrap] > .urlbarView-row[has-url] > .urlbarView-row-inner > .urlbarView-url:-moz-locale-dir(rtl) {
    padding-right: calc(@urlbarViewItemInlinePadding@ + @identityBoxMarginInlineEnd@ +  16px);
  }
  

  .urlbarView[actionoverride] .urlbarView-results[wrap] > .urlbarView-row[has-url] > .urlbarView-row-inner > .urlbarView-no-wrap > .urlbarView-title-separator,
  .urlbarView-results[wrap] > .urlbarView-row[has-url]:not([type$=tab]) > .urlbarView-row-inner > .urlbarView-no-wrap > .urlbarView-title-separator,
  .urlbarView-results[wrap] > .urlbarView-row:is([type=remotetab], [sponsored]):is(:hover, [selected]) > .urlbarView-row-inner > .urlbarView-no-wrap > .urlbarView-title-separator {
    display: none;
  }
}




.urlbarView-results[wrap] > .urlbarView-row[type=tip] > .urlbarView-row-inner {
  flex-wrap: wrap;
}

.urlbarView-row:not([type=tip]):not([type=dynamic]) > .urlbarView-row-inner > .urlbarView-no-wrap > .urlbarView-title[overflow],
.urlbarView-url[overflow] {
  mask-image: linear-gradient(to left, transparent, black 2em);
}

.urlbarView-row:not([type=tip]):not([type=dynamic]) > .urlbarView-row-inner > .urlbarView-no-wrap > .urlbarView-title[overflow]:not([isurl]):-moz-locale-dir(rtl) {
  mask-image: linear-gradient(to right, transparent, black 2em);
}

.urlbarView-title[isurl]:-moz-locale-dir(rtl),
.urlbarView-url:-moz-locale-dir(rtl) {
  direction: ltr !important;
}

.urlbarView-row:not([type=tip]):not([type=dynamic]):hover > .urlbarView-row-inner {
  background: var(--arrowpanel-dimmed);
}

.urlbarView-row:not([type=tip]):not([type=dynamic])[selected] > .urlbarView-row-inner {
  background: var(--autocomplete-popup-highlight-background);
  color: var(--autocomplete-popup-highlight-color);
  fill-opacity: 1;
}



.urlbarView-favicon {
  min-width: 16px;
  height: 16px;
  margin-inline-end: calc(@urlbarViewIconMarginEnd@);
  background-repeat: no-repeat;
  background-size: contain;
  -moz-context-properties: fill, fill-opacity;
}

@media (min-resolution: 2dppx) {
  .urlbarView-favicon {
      transform: translateY(-1.5px);
  }
}
/* ... */

